--- a/app/src/main/res/drawable/ic_folder.xml
+++ b/app/src/main/res/drawable/ic_folder.xml
@@ -20,10 +20,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:viewportWidth="16"
+    android:viewportHeight="16">
   <path
-      android:pathData="M22.5,21H1.5V3H9V6H22.5V21ZM3,19.5H21V7.5H7.5V4.5H3V19.5Z"
+      android:pathData="M8.5,4L6.5,2H1V14H15V4H8.5ZM14,5H8.0858L6.0858,3H2V13H14V5Z"
       android:fillColor="@color/icon_norm"
       android:fillType="evenOdd"/>
 </vector>
