--- a/app/src/main/res/drawable/ic_folder_move.xml
+++ b/app/src/main/res/drawable/ic_folder_move.xml
@@ -23,7 +23,7 @@
     android:viewportWidth="16"
     android:viewportHeight="16">
   <path
-      android:pathData="M1,14H15V4H6V2H1V7.1109H2V3H5V5H14V13H2V10.5H1V14ZM8.1711,9.3L6.5213,10.9498L7.2284,11.6569L9.3497,9.5355L10.0568,8.8284L9.3497,8.1213L7.2284,6L6.5213,6.7071L8.1142,8.3H0V9.3H8.1711Z"
+      android:pathData="M7.5,4L5.5,2H1V6.9H2V3H5.0858L7.0858,5H14V13H2V10.9H1V14H15V4H7.5ZM9.3497,8.1213L7.2284,6L6.5213,6.7071L8.1142,8.3H1V9.3H8.1711L6.5213,10.9497L7.2284,11.6569L9.3497,9.5355L10.0568,8.8284L9.3497,8.1213Z"
       android:fillColor="@color/icon_norm"
       android:fillType="evenOdd"/>
 </vector>
