--- a/app/src/main/res/layout/activity_labels_manager.xml
+++ b/app/src/main/res/layout/activity_labels_manager.xml
@@ -18,9 +18,8 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <include
@@ -37,156 +36,129 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ch.protonmail.android.views.CustomFontTextView
+            <TextView
                 android:id="@+id/labels_dialog_title"
+                style="@style/Proton.Text.DefaultSmall.Interaction"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/fields_default_space_medium"
-                android:layout_marginTop="@dimen/fields_default_space_medium"
-                android:text="@string/label_add_new"
-                android:textColor="@color/switch_settings_item"
-                android:paddingEnd="@dimen/fields_default_space_medium"
-                android:paddingLeft="@dimen/fields_default_space_medium"
-                android:paddingRight="@dimen/fields_default_space_medium"
-                android:paddingStart="@dimen/fields_default_space_medium"
-                app:fontName="Roboto-Regular.ttf" />
+                android:layout_marginStart="@dimen/padding_l"
+                android:layout_marginTop="@dimen/padding_xl"
+                android:layout_marginEnd="@dimen/padding_l"
+                android:layout_marginBottom="@dimen/padding_m"
+                android:text="@string/label_add_new" />
 
             <RelativeLayout
                 android:id="@+id/add_label_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingEnd="@dimen/fields_default_space_medium"
-                android:paddingLeft="@dimen/fields_default_space_medium"
-                android:paddingRight="@dimen/fields_default_space_medium"
-                android:paddingStart="@dimen/fields_default_space_medium">
+                android:layout_marginStart="@dimen/padding_l"
+                android:layout_marginEnd="@dimen/padding_l"
+                android:layout_marginBottom="@dimen/padding_xl">
 
-                <ch.protonmail.android.views.CustomFontEditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/label_name"
+                    style="@style/ProtonInput.Mail"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:background="@drawable/new_label_edittext"
+                    android:layout_height="wrap_content"
                     android:hint="@string/label_name"
                     android:imeOptions="actionDone"
                     android:inputType="text"
                     android:maxLines="1"
-                    android:textCursorDrawable="@null"
-                    android:paddingBottom="0dp"
-                    android:paddingTop="0dp"
-                    android:textColorHint="@color/fog_gray"
-                    android:textSize="@dimen/h4" />
+                    android:textCursorDrawable="@null" />
             </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@drawable/list_divider" />
 
             <LinearLayout
                 android:id="@+id/label_color_parent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/fields_default_space_large"
                 android:orientation="vertical"
-                android:paddingEnd="@dimen/fields_default_space_medium"
-                android:paddingLeft="@dimen/fields_default_space_medium"
-                android:paddingRight="@dimen/fields_default_space_medium"
-                android:paddingStart="@dimen/fields_default_space_medium"
+                android:paddingStart="@dimen/padding_xl"
+                android:paddingEnd="@dimen/padding_xl"
                 android:visibility="gone">
 
-                <ch.protonmail.android.views.CustomFontTextView
-                    android:id="@+id/labels_colors_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/fields_default_space_medium"
-                    android:layout_marginTop="@dimen/fields_default_space_medium"
-                    android:text="@string/choose_label_color"
-                    android:textColor="@color/switch_settings_item"
-                    app:fontName="Roboto-Regular.ttf" />
-
                 <GridView
-                    android:id="@+id/labels_grid_view"
+                    android:id="@+id/colors_grid_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/activity_horizontal_margin_small"
-                    android:layout_marginRight="@dimen/activity_horizontal_margin_small"
+                    android:layout_gravity="center"
                     android:layout_marginTop="@dimen/fields_default_space_large"
                     android:divider="@null"
                     android:dividerHeight="0dp"
                     android:listSelector="@android:color/transparent"
+                    android:nestedScrollingEnabled="false"
                     android:numColumns="5"
                     android:scrollbars="none"
-                    android:verticalSpacing="@dimen/fields_default_space" />
+                    android:horizontalSpacing="@dimen/padding_xl"
+                    android:verticalSpacing="@dimen/padding_xl" />
 
-                <ch.protonmail.android.views.CustomFontButton
-                    android:id="@+id/save_new_label"
-                    style="@style/SettingsButtonBlue"
+                <Button
+                    android:id="@+id/save_button"
+                    style="@style/ProtonButton"
                     android:layout_width="wrap_content"
-                    android:layout_height="44dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/fields_default_space_medium"
-                    android:gravity="center"
-                    android:maxLines="1"
-                    android:paddingEnd="@dimen/fields_default_space"
-                    android:paddingLeft="@dimen/fields_default_space"
-                    android:paddingRight="@dimen/fields_default_space"
-                    android:paddingStart="@dimen/fields_default_space"
-                    android:text="@string/save_new_label"
-                    app:fontName="Roboto-Light.ttf" />
+                    android:layout_marginTop="@dimen/padding_xl"
+                    android:paddingStart="@dimen/padding_xxl"
+                    android:paddingEnd="@dimen/padding_xxl"
+                    android:text="@string/update_label" />
             </LinearLayout>
 
             <RelativeLayout
                 android:id="@+id/labels_list_view_parent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/fields_default_space"
-                android:layout_marginTop="@dimen/spacing">
+                android:layout_marginStart="@dimen/padding_l"
+                android:layout_marginEnd="@dimen/padding_l"
+                android:paddingBottom="@dimen/padding_xl"
+                android:visibility="visible">
 
-                <ch.protonmail.android.views.CustomFontTextView
+                <TextView
                     android:id="@+id/available_labels_title"
+                    style="@style/Proton.Text.DefaultSmall.Interaction"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/fields_default_space_medium"
-                    android:text="@string/available_labels"
-                    android:paddingEnd="@dimen/fields_default_space_medium"
-                    android:paddingLeft="@dimen/fields_default_space_medium"
-                    android:paddingRight="@dimen/fields_default_space_medium"
-                    android:paddingStart="@dimen/fields_default_space_medium"
-                    android:textColor="@color/switch_settings_item"
-                    app:fontName="Roboto-Regular.ttf" />
+                    android:layout_marginTop="@dimen/padding_xl"
+                    android:layout_marginBottom="@dimen/padding_m"
+                    android:text="@string/available_labels" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/labels_recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/available_labels_title"
-                    android:divider="@color/iron_gray"
+                    android:divider="@color/separator_norm"
                     android:dividerHeight="1px"
                     android:paddingTop="0dp" />
 
-                <ch.protonmail.android.views.CustomFontTextView
+                <TextView
                     android:id="@+id/no_labels"
+                    style="@style/Proton.Text.Default.Weak"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/fields_default_space_large"
                     android:layout_below="@id/available_labels_title"
                     android:layout_marginStart="@dimen/fields_default_space_large"
                     android:text="@string/no_labels"
                     android:textColor="@color/iron_gray"
-                    android:textSize="@dimen/h4"
-                    android:visibility="gone"
-                    app:fontName="Roboto-Regular.ttf" />
+                    android:visibility="gone" />
 
-                <ch.protonmail.android.views.CustomFontButton
+                <Button
                     android:id="@+id/delete_labels"
-                    style="@style/SettingsButtonBlue"
+                    style="@style/ProtonButton"
                     android:layout_width="wrap_content"
-                    android:layout_height="38dp"
+                    android:layout_height="wrap_content"
                     android:layout_below="@id/labels_recycler_view"
-                    android:layout_centerVertical="true"
                     android:layout_centerHorizontal="true"
+                    android:layout_marginTop="@dimen/padding_l"
+                    android:enabled="false"
                     android:maxLines="1"
-                    android:paddingEnd="@dimen/fields_default_space_large"
-                    android:paddingLeft="@dimen/fields_default_space_large"
-                    android:paddingRight="@dimen/fields_default_space_large"
-                    android:paddingStart="@dimen/fields_default_space_large"
-                    android:layout_marginBottom="@dimen/fields_default_space"
-                    android:text="@string/delete_selected"
-                    app:fontName="Roboto-Regular.ttf" />
+                    android:paddingStart="@dimen/padding_xl"
+                    android:paddingEnd="@dimen/padding_xl"
+                    android:text="@string/delete_selected" />
             </RelativeLayout>
         </LinearLayout>
     </ScrollView>
