Move to using core components like radio buttons and switches Clean up settings related components, styles, values that are not used anymore

--- a/app/src/main/res/layout/activity_snooze_notifications.xml
+++ b/app/src/main/res/layout/activity_snooze_notifications.xml
@@ -53,7 +53,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 
                 <androidx.appcompat.widget.SwitchCompat
                     android:id="@+id/notificationSnoozeScheduledSwitch"
-                    style="@style/ProtonSwitch.Mail"
+                    style="@style/ProtonSwitch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/padding_l"
