--- a/app/src/main/res/drawable/repeat_day_unselected_background.xml
+++ b/app/src/main/res/drawable/repeat_day_unselected_background.xml
@@ -18,6 +18,6 @@ You should have received a copy of the GNU General Public License
 along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="@color/interaction_norm" android:width="1dp"/>
+    <stroke android:color="?attr/proton_interaction_norm" android:width="1dp"/>
     <corners android:radius="3dp" />
 </shape>
