--- a/app/src/main/res/layout/activity_edit_settings_item.xml
+++ b/app/src/main/res/layout/activity_edit_settings_item.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
 Copyright (c) 2020 Proton Technologies AG
 
 This file is part of ProtonMail.
@@ -18,7 +17,6 @@ You should have received a copy of the GNU General Public License
 along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -45,144 +43,17 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
             android:layout_height="wrap_content" />
     </ScrollView>
 
-    <RelativeLayout
+    <FrameLayout
+        android:id="@+id/progressBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:background="@color/white_55"
+        android:visibility="gone">
 
-        <LinearLayout
-            android:id="@+id/header"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:layout_marginBottom="@dimen/fields_default_space"
-            android:background="@color/switch_background"
-            android:orientation="horizontal"
-            android:paddingStart="@dimen/view_padding"
-            android:paddingLeft="@dimen/view_padding"
-            android:paddingEnd="@dimen/view_padding"
-            android:paddingRight="@dimen/view_padding">
-
-            <ch.protonmail.android.views.CustomFontTextView
-                android:id="@+id/featureTitle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:textColor="@color/white"
-                android:textSize="@dimen/h4"
-                app:fontName="Roboto-Light.ttf" />
-
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/enableFeatureSwitch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right|center_vertical"
-                android:gravity="right|center_vertical"
-                android:padding="0dp"
-                android:theme="@style/SwitchSettings"
-                app:theme="@style/SwitchSettings" />
-
-        </LinearLayout>
-
-        <FrameLayout
-            android:layout_width="match_parent"
+        <ProgressBar
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/header"
-            android:paddingStart="@dimen/view_padding"
-            android:paddingLeft="@dimen/view_padding"
-            android:paddingEnd="@dimen/view_padding"
-            android:paddingRight="@dimen/view_padding">
-
-            <LinearLayout
-                android:id="@+id/edit_signature_parent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:visibility="gone">
-
-                <ch.protonmail.android.views.CustomFontTextView
-                    android:id="@+id/edit_signature_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/fields_default_space_large"
-                    android:layout_marginBottom="@dimen/fields_default_space_medium"
-                    android:text="@string/signature_text"
-                    android:textColor="@color/switch_settings_item"
-                    app:fontName="Roboto-Regular.ttf" />
-
-                <ch.protonmail.android.views.CustomFontEditText
-                    android:id="@+id/edit_signature"
-                    style="@style/SignatureEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="top"
-                    android:minLines="8"
-                    android:textCursorDrawable="@drawable/cursor_black"
-                    app:fontName="Roboto-Regular.ttf" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/edit_display_name_parent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:visibility="gone">
-
-                <ch.protonmail.android.views.CustomFontTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/fields_default_space_large"
-                    android:layout_marginBottom="@dimen/fields_default_space_medium"
-                    android:text="@string/display_name"
-                    android:textColor="@color/switch_settings_item"
-                    app:fontName="Roboto-Regular.ttf" />
-
-                <ch.protonmail.android.views.CustomFontEditText
-                    android:id="@+id/edit_display_name"
-                    style="@style/DisplayNameEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="top"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:textCursorDrawable="@drawable/cursor_black"
-                    app:fontName="Roboto-Light.ttf" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/descriptionParent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone">
-
-                <ch.protonmail.android.views.CustomFontTextView
-                    android:id="@+id/description"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="@dimen/fields_default_space"
-                    android:paddingBottom="5dp"
-                    android:text="@string/auto_download_messages_subtitle"
-                    android:textColor="@color/iron_gray"
-                    android:textSize="@dimen/h4"
-                    app:fontName="Roboto-Light.ttf" />
-            </LinearLayout>
-        </FrameLayout>
-
-        <FrameLayout
-            android:id="@+id/progressBar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white_55"
-            android:visibility="gone">
-
-            <ProgressBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:indeterminate="true" />
-        </FrameLayout>
-    </RelativeLayout>
+            android:layout_gravity="center"
+            android:indeterminate="true" />
+    </FrameLayout>
 </LinearLayout>
