--- a/app/src/main/res/layout/activity_notification_settings.xml
+++ b/app/src/main/res/layout/activity_notification_settings.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
 Copyright (c) 2020 Proton Technologies AG
 
 This file is part of ProtonMail.
@@ -30,22 +29,19 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:animateLayoutChanges="true">
+        android:animateLayoutChanges="true"
+        android:orientation="vertical">
 
-        <ch.protonmail.android.views.CustomFontTextView
+        <TextView
             android:id="@+id/title_notifications"
+            style="@style/Proton.Text.DefaultSmall.Interaction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/fields_default_space_medium"
-            android:layout_marginEnd="@dimen/view_padding"
-            android:layout_marginLeft="@dimen/view_padding"
-            android:layout_marginRight="@dimen/view_padding"
-            android:layout_marginStart="@dimen/view_padding"
-            android:layout_marginTop="@dimen/fields_default_space_large"
-            android:text="@string/available_options"
-            android:textColor="@color/switch_settings_item"
-            app:fontName="Roboto-Regular.ttf" />
+            android:layout_marginStart="@dimen/padding_l"
+            android:layout_marginTop="@dimen/padding_l"
+            android:layout_marginEnd="@dimen/padding_l"
+            android:layout_marginBottom="@dimen/padding_xl"
+            android:text="@string/available_options" />
 
         <RelativeLayout
             android:id="@+id/ringtone_container"
@@ -53,55 +49,39 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/fields_default_space_xlarge"
             android:clickable="false"
-            android:padding="@dimen/message_spacing">
+            android:padding="@dimen/padding_l">
 
-            <ch.protonmail.android.views.CustomFontButton
+            <Button
                 android:id="@+id/ringtone_settings"
-                style="@style/SettingsButtonBlue"
+                style="@style/ProtonButton"
                 android:layout_width="wrap_content"
-                android:layout_height="44dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:layout_margin="2dp"
-                android:paddingEnd="@dimen/fields_default_space"
-                android:paddingLeft="@dimen/fields_default_space"
-                android:paddingRight="@dimen/fields_default_space"
-                android:paddingStart="@dimen/fields_default_space"
-                android:text="@string/ringtone"
-                app:fontName="Roboto-Regular.ttf" />
+                android:text="@string/ringtone" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_toLeftOf="@id/ringtone_settings"
                 android:layout_toStartOf="@id/ringtone_settings"
                 android:gravity="center_vertical"
-                android:orientation="vertical"
-                android:paddingEnd="@dimen/view_padding"
-                android:paddingLeft="@dimen/view_padding"
-                android:paddingRight="@dimen/view_padding"
-                android:paddingStart="@dimen/view_padding">
+                android:orientation="vertical">
 
-                <ch.protonmail.android.views.CustomFontTextView
+                <TextView
+                    style="@style/Proton.Text.Default"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/fields_default_space_small"
-                    android:layout_marginRight="@dimen/fields_default_space_small"
                     android:orientation="vertical"
-                    android:text="@string/ringtone_selected"
-                    android:textSize="@dimen/h3"
-                    app:fontName="Roboto-Light.ttf" />
+                    android:text="@string/ringtone_selected" />
 
-                <ch.protonmail.android.views.CustomFontTextView
+                <TextView
                     android:id="@+id/ringtone_title"
+                    style="@style/Proton.Text.Default.Bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:textSize="@dimen/h3"
                     android:maxLines="2"
-                    app:fontName="Roboto-Bold.ttf" />
+                    android:orientation="vertical" />
             </LinearLayout>
         </RelativeLayout>
 
