--- a/app/src/main/res/layout/layout_error_encrypted.xml
+++ b/app/src/main/res/layout/layout_error_encrypted.xml
@@ -36,9 +36,8 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:text="@string/error_encrypted_data"
         app:fontName="Roboto-Light.ttf" />
 
-    <ch.protonmail.android.views.CustomFontButton
+    <Button
         android:id="@+id/retry"
-        style="@style/SettingsButtonBlue"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
         android:layout_gravity="center_horizontal"
@@ -49,7 +48,6 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:paddingRight="@dimen/fields_default_space_medium"
         android:paddingStart="@dimen/fields_default_space_medium"
         android:text="@string/retry"
-        android:textAllCaps="true"
-        app:fontName="Roboto-Regular.ttf" />
+        android:textAllCaps="true" />
 
 </LinearLayout>
