--- a/app/src/main/res/layout/radio_button_list_item.xml
+++ b/app/src/main/res/layout/radio_button_list_item.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
 Copyright (c) 2020 Proton Technologies AG
 
@@ -17,8 +16,10 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 -->
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="@color/dark_purple" />
-    <corners android:radius="1dp"/>
-</shape>
+
+<RadioButton xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="start"
+    android:layout_marginStart="@dimen/settings_radio_button_margin"
+    android:layout_marginEnd="@dimen/padding_l"/>
