--- a/app/src/main/res/layout/activity_edit_contact_details.xml
+++ b/app/src/main/res/layout/activity_edit_contact_details.xml
@@ -85,7 +85,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <me.proton.core.presentation.ui.view.ProtonButton
+                <Button
                     android:id="@+id/addPhotoBtn"
                     style="@style/ProtonButton.OutlinedButton"
                     android:layout_width="wrap_content"
