--- a/app/src/main/res/layout/content_edit_create_contact_group_header.xml
+++ b/app/src/main/res/layout/content_edit_create_contact_group_header.xml
@@ -45,7 +45,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <me.proton.core.presentation.ui.view.ProtonButton
+            <Button
                 android:id="@+id/chooseGroupColor"
                 style="@style/ProtonButton.OutlinedButton"
                 android:layout_width="wrap_content"
